2019/02/28 首页文章列表显示

--- a/main/src/main/res/values/strings.xml
+++ b/main/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">main</string>
+    <string name="str_top_tip">置顶</string>
+    <string name="str_top_new_tip">新</string>
 </resources>
